--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 dvdcopy (0.0-1) UNRELEASED; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release (Closes: #nnnn)
 
  -- Benedikt Ahrens <benedikt.ahrens@gmail.com>  Sun, 16 Aug 2015 13:30:27 +0200
